# setuptools-asdf

./: README.md  setup.cfg
src/setuptools_asdf/: integration.py
src/setuptools_asdf/resources/: extension.py.template
