[metadata]
#license_file =
license = BSD
name = setuptools_asdf
url = https://github.com/spacetelescope/setuptools_asdf/
author = STScI
author_email = help@stsci.edu
description = Setuptools plugin for schema packages
#long_description=

[options]
install_requires =
    setuptools
    pyyaml
packages = find:
package_dir =
    = src

[options.packages.find]
where = src

[options.package_data]
* = *.template

[options.entry_points]
setuptools.file_finders =
    setuptools_asdf = setuptools_asdf.integration:find_files

setuptools.finalize_distribution_options=
    setuptools_asdf = setuptools_asdf.integration:finalize_distribution_options

# distutils.setup_keywords =
#     setuptools_asdf = setuptools_asdf.integration:setup_keywords
